# low_esotericism

./: CMakeLists.txt  README.md  cmd_args_parser.cpp  input_request.h  kernels.cpp  kernels.h  main.cpp  progress_counter.cpp  progress_counter.h  solver.cpp  solver.h  task.cpp  task.h
build-dir/: 02-005-001-3001-500.csv  02-01-01-3001-500.csv  CMakeCache.txt  Makefile  build_script.sh  cmake_install.cmake  experiment-01.csv  experiment-02.csv  low_esotericism  sample.json  sample_C.csv
